# reel_back

./: .gitignore  Dockerfile  Dockerfile.cloud  README.md  docker-compose.yaml  document.md  entrypoint.sh  make.env.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: test_api.yml
api/: config.py  db.py  dependencies.py  main.py  migrate_cloud_db.py  migrate_db.py
api/cruds/: event.py  job.py  message.py  plan.py  tag.py  user.py
api/models/: __init__.py  bookmark.py  company.py  event.py  job.py  message.py  plan.py  review.py  tag.py  user.py
api/modules/: email.py
api/routers/: __init__.py  auth.py  event.py  job.py  notice.py  plan.py  tag.py  user.py
api/schemas/: __init__.py  company.py  event.py  job.py  message.py  plan.py  purchase.py  response.py  tag.py  user.py
api/templates/: MAIL-paid-check.html  MAIL-reset-password.html  MAIL-to-admin.html  MAIL-verify-email.html  error.html  layout.html  mail-to-admin.html  reset-password-form.html  reset-password.html  result.html  verify-email.html
api/utils/: __init__.py  common.py  email.py
tests/: conftest.py  test_db.py  test_event.py  test_job.py  test_main.py  test_message.py  test_tag_crud.py  test_user_crud.py
