[tool.poetry]
name = "fastapi-demo"
version = "0.1.0"
description = ""
authors = ["250304s <250304s@ugs.kochi-tech.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.26.0"}
sqlalchemy = "^2.0.23"
aiomysql = "^0.2.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
jinja2 = "^3.1.2"
pydantic = {extras = ["email"], version = "^2.5.3"}
pydantic-settings = "^2.1.0"
boto3 = "^1.34.21"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.2"
aiosqlite = "^0.19.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

